--- a/index.html
+++ b/index.html
@@ -2,6 +2,28 @@
 <html>
 <head>
   <title>Es kommt bald was</title>
+    <style>
+    body {
+      background-color: #f1f1f1;
+      font-family: sans-serif;
+    }
+    h1 {
+      text-align: center;
+      font-size: 48px;
+      color: #333;
+      margin: 20px 0;
+    }
+    p {
+      font-size: 18px;
+      color: #555;
+      text-align: center;
+    }
+    #timer {
+      font-size: 36px;
+      font-weight: bold;
+      color: #e74c3c;
+    }
+  </style>
 </head>
 <body>
   <h1>Es kommt bald was</h1>
