--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     body {
       background-color: #f1f1f1;
       font-family: sans-serif;
-    }
-    h1 {
       text-align: center;
+    }
+    #logo {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    h1 {
       font-size: 48px;
       color: #333;
       margin: 20px 0;
@@ -16,7 +20,6 @@
     p {
       font-size: 18px;
       color: #555;
-      text-align: center;
     }
     #timer {
       font-size: 36px;
@@ -26,6 +29,7 @@
   </style>
 </head>
 <body>
+  <img id="logo" src="logo.png" alt="Logo">
   <h1>Es kommt bald was</h1>
   <p>Der Countdown bis zum neuen Jahr läuft:</p>
   <p id="timer"></p>
