--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Es kommt bald was</title>
+  <title>It's Coming Soon</title>
   <style>
     body {
       background-color: #f1f1f1;
@@ -25,23 +25,57 @@
       color: #333;
       margin: 20px 0;
     }
-    p {
-      font-size: 18px;
-      color: #555;
+    .clock {
+      width: 250px;
+      height: 250px;
+      border: 10px solid #333;
+      border-radius: 50%;
+      position: relative;
+      display: inline-block;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     }
-    #timer {
-      font-size: 36px;
-      font-weight: bold;
-      color: #e74c3c;
+    .clock-face {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform: translateY(-3px);
+      background: white;
+      border-radius: 50%;
+    }
+    .hand {
+      width: 50%;
+      height: 6px;
+      background: #333;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.5s;
+    }
+    .hand::before {
+      content: "";
+      background: #333;
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      position: absolute;
+      top: -3px;
+      left: -3px;
     }
   </style>
 </head>
 <body>
   <img id="logo" src="logo.png" alt="Logo">
   <div id="container">
-    <h1>Es kommt bald was</h1>
-    <p>Der Countdown bis zum neuen Jahr läuft:</p>
-    <p id="timer"></p>
+    <h1>It's Coming Soon</h1>
+    <div class="clock">
+      <div class="clock-face">
+        <div id="hour" class="hand"></div>
+        <div id="minute" class="hand"></div>
+        <div id="second" class="hand"></div>
+      </div>
+    </div>
   </div>
   <script>
     // Funktion, die den Timer aktualisiert
