--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>It's Coming Soon</title>
   <style>
     body {
-      background-color: #f1f1f1;
+      background-image: url("bg.png");
       font-family: sans-serif;
       text-align: center;
     }
