--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <h1>It's Coming Soon</h1>
     <div class="clock">
       <div class="clock-face">
+        <div id="days" class="hand"></div>
         <div id="hour" class="hand"></div>
         <div id="minute" class="hand"></div>
         <div id="second" class="hand"></div>
