--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       position: absolute;
       top: 20px;
       left: 20px;
-      width: 10%;
+      width: 5%;
     }
     #container {
       position: absolute;
@@ -21,8 +21,9 @@
       transform: translate(-50%, -50%);
     }
     h1 {
-      font-size: 48px;
-      color: #333;
+      font: 800 40px Arial;
+      -webkit-text-fill-color: transparent;
+      -webkit-text-stroke: 1px;
       margin: 20px 0;
     }
     .clock {
@@ -68,7 +69,7 @@
 <body>
   <img id="logo" src="logo.png" alt="Logo">
   <div id="container">
-    <h1>It's Coming Soon</h1>
+    <h1>Bald beginnt das Feierjahr</h1>
     <div class="clock">
       <div class="clock-face">
         <div id="days" class="hand"></div>
