--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
     h1 {
       font: 800 40px Arial;
-      -webkit-text-fill-color: transparent;
+      -webkit-text-fill-color: white;
       -webkit-text-stroke: 1px;
       margin: 20px 0;
     }
