--- a/index.html
+++ b/index.html
@@ -26,112 +26,6 @@
       -webkit-text-stroke: 1px;
       margin: 20px 0;
     }
-    .flap {
-	display: none;
-	position: absolute;
-	width: 100%;
-	height: 50%;
-	background-color: $flipColour;
-	left: 0;
-	top: 0;
-	border-radius: 1vw 1vw 0 0;
-	transform-origin: 50% 100%;
-	backface-visibility: hidden;
-	overflow: hidden;
-	
-	&::before {
-		content: attr(data-content);
-		position: absolute;
-		left: 50%;
-	}
-	
-	&.front::before,
-	&.under::before {
-		top: 100%;
-		transform: translate(-50%, -50%);
-	}
-	
-	&.back {
-		transform: rotateY(180deg);
-		&::before {
-			top: 100%;
-			transform:  translate(-50%, -50%) rotateZ(180deg);
-		}
-	}
-
-	&.over {
-		z-index: 2;
-	}
-	
-	&.under {
-		z-index: 1;
-	}
-	
-	&.front {
-		animation: flip-down-front 300ms ease-in both;
-	}
-	
-	&.back {
-		animation: flip-down-back 300ms ease-in both;
-	}
-	
-	&.under {
-		animation: fade-under 300ms ease-in both;
-	}
-	
-}
-
-@keyframes flip-down-front {
-	0% {
-		transform: rotateX(0deg);
-		background-color: $flipColour;
-		color: $textColour;
-	}
-	100% {
-		transform: rotateX(-180deg);
-		background-color: $flipColourDark;
-		color: $textColourDark;
-	}
-}
-
-@keyframes flip-down-back {
-	0% {
-		transform: rotateY(180deg) rotateX(0deg);
-		background-color: $flipColourDark;
-		color: $textColourDark;
-	}
-	100% {
-		transform: rotateY(180deg) rotateX(180deg);
-		background-color: $flipColour;
-		color: $textColour;
-	}
-}
-
-@keyframes fade-under {
-	0% {
-		background-color: $flipColourDark;
-		color: $textColourDark;
-	}
-	100% {
-		background-color: $flipColour;
-		color: $textColour;
-	}
-}
-
-.clock {
-	position: absolute;
-	width: 70vw;
-	top: 50%;
-	left: 15vw;
-	transform: translateY(-50%);
-	perspective: 100vw;
-	perspective-origin: 50% 50%;
-	
-	.digit {
-		margin-right: 1vw;
-		&:nth-child(2n+2) { margin-right: 3.5vw; }
-		&:last-child { margin-right: 0; }
-	}
   </style>
 </head>
 <body>
@@ -142,8 +36,9 @@
     <div id="flipdown" class="flipdown"></div>
   </div>
   <script>
-	  document.addEventListener('DOMContentLoaded', () => {
+  document.addEventListener('DOMContentLoaded', () => {
 
+  var currentDate = new Date();
   // Unix timestamp (in seconds) to count down to
   var twoDaysFromNow = new Date(currentDate.getFullYear() + 1, 0, 1);
 
@@ -169,6 +64,7 @@
   var ver = document.getElementById('ver');
   ver.innerHTML = flipdown.version;
 });
+	  /*
     // Funktion, die den Timer aktualisiert
     function updateTimer() {
       // Hole das aktuelle Datum
@@ -241,7 +137,7 @@ $(document).ready(function(){
 		setTime(true);
 	}, 1000);
 	
-});
+});*/
   </script>
 </body>
 </html>
