--- a/index.html
+++ b/index.html
@@ -64,80 +64,8 @@
   var ver = document.getElementById('ver');
   ver.innerHTML = flipdown.version;
 });
-	  /*
-    // Funktion, die den Timer aktualisiert
-    function updateTimer() {
-      // Hole das aktuelle Datum
-      var currentDate = new Date();
-      // Setze das neue Jahr auf den 1. Januar des nächsten Jahres
-      var newYear = new Date(currentDate.getFullYear() + 1, 0, 1);
-      // Berechne die verbleibende Zeit bis zum neuen Jahr in Millisekunden
-      var timeLeft = newYear - currentDate;
-      // Konvertiere die verbleibende Zeit in Sekunden
-      var seconds = Math.floor(timeLeft / 1000);
-      // Berechne die verbleibende Zeit in Tagen, Stunden, Minuten und Sekunden
-      var days = Math.floor(seconds / 86400); // 86400 Sekunden sind ein Tag
-      seconds = seconds % 86400;
-      var hours = Math.floor(seconds / 3600);
-      seconds = seconds % 3600;
-      var minutes = Math.floor(seconds / 60);
-      seconds = seconds % 60;
-      // Aktualisiere den Timer im HTML-Dokument
-      document.getElementById("timer").innerHTML = days + " Tage " + hours + " Stunden " + minutes + " Minuten " + seconds + " Sekunden";
-    }
-    // Rufe die updateTimer()-Funktion alle 1000 Millisekunden (1 Sekunde)
 
-    setInterval(updateTimer, 1000);
-    
-    function flipTo(digit, n){
-	var current = digit.attr('data-num');
-	digit.attr('data-num', n);
-	digit.find('.front').attr('data-content', current);
-	digit.find('.back, .under').attr('data-content', n);
-	digit.find('.flap').css('display', 'block');
-	setTimeout(function(){
-		digit.find('.base').text(n);
-		digit.find('.flap').css('display', 'none');
-	}, 350);
-}
-
-function jumpTo(digit, n){
-	digit.attr('data-num', n);
-	digit.find('.base').text(n);
-}
-
-function updateGroup(group, n, flip){
-	var digit1 = $('.ten'+group);
-	var digit2 = $('.'+group);
-	n = String(n);
-	if(n.length == 1) n = '0'+n;
-	var num1 = n.substr(0, 1);
-	var num2 = n.substr(1, 1);
-	if(digit1.attr('data-num') != num1){
-		if(flip) flipTo(digit1, num1);
-		else jumpTo(digit1, num1);
-	}
-	if(digit2.attr('data-num') != num2){
-		if(flip) flipTo(digit2, num2);
-		else jumpTo(digit2, num2);
-	}
-}
-
-function setTime(flip){
-	var t = new Date();
-	updateGroup('hour', t.getHours(), flip);
-	updateGroup('min', t.getMinutes(), flip);
-	updateGroup('sec', t.getSeconds(), flip);
-}
-
-$(document).ready(function(){
-	
-	setTime(false);
-	setInterval(function(){
-		setTime(true);
-	}, 1000);
-	
-});*/
   </script>
+  <script src="https://pbutcher.uk/flipdown/js/flipdown/flipdown.js"></script>
 </body>
 </html>
