--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
       transform: translate(-50%, -50%);
     }
     h1 {
-      font: 800 40px Arial;
-      -webkit-text-fill-color: white;
-      -webkit-text-stroke: 1px;
+      font-size: 48px;
+      color: #333;
       margin: 20px 0;
     }
   </style>
